# lndice

./: Cargo.toml  README.md
.github/workflows/: check-rust-code.yml
examples/: parser.rs
src/: c_api.rs  lib.rs  parser.rs  types.rs
src/parser/: choice.rs  constexpr.rs  dice.rs  expression.rs  individual_dice.rs  query.rs  replay_dice.rs  sum_dice.rs
src/parser/dice/: individual.rs  infinite.rs  replay.rs  sum.rs  tally.rs  two_six.rs
src/types/: choice.rs  constexpr.rs  dice.rs  query.rs
